--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -11,10 +11,14 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@types/axios": "^0.9.36",
+    "@types/form-data": "^2.2.1",
+    "axios": "^1.8.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
+    "form-data": "^4.0.2",
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
     "morgan": "^1.10.0",
@@ -25,7 +29,7 @@
     "@types/express": "^4.17.17",
     "@types/fluent-ffmpeg": "^2.1.21",
     "@types/morgan": "^1.9.4",
-    "@types/multer": "^1.4.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.4.5",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
