--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -15,6 +15,9 @@
     "jsx": "react-jsx",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    
+    /* Types */
+    "types": ["jest", "node", "@testing-library/jest-dom"],
 
     /* Linting */
     "strict": true,
